# longtail-opportunity-mining

./: .env.example  .gitignore  CLAUDE.md  DESIGN_PLAN.md  PLAN_BRIEF.md  pyproject.toml  requirements.txt
config/: default.yaml
config/labels/: cold_cough_zh_v1.yaml  hongyuan.yaml  shushuo.yaml
docs/: data_spec.md  data_spec_examples.7z  pipeline_tuning_log.md  交付操作指引.md  社媒项目数据交付要求.7z
docs/examples/: labels_example.csv  posts_example.csv
scripts/: parse_labels.py  run_pipeline.py  upload_server.py
src/longtail/: __init__.py  clustering.py  config.py  cos_client.py  embedding.py  ingest.py  label_convert.py  label_match.py  masking.py  pipeline.py  utils.py
tests/: test_clustering.py  test_label_match.py  test_masking.py  test_pipeline.py
