[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longtail-opportunity-mining"
version = "0.1.0"
description = "中文 cold/cough 长尾机会挖掘 MVP"
readme = "PLAN_BRIEF.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "jieba>=0.42",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
