[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longtail-opportunity-mining"
version = "0.1.0"
description = "中文 cold/cough 长尾机会挖掘 MVP"
readme = "PLAN_BRIEF.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "jieba>=0.42",
]

[project.optional-dependencies]
phase2 = [
  "sentence-transformers>=2.2",
  "umap-learn>=0.5",
  "hdbscan>=0.8",
  "scikit-learn>=1.3",
  "numpy>=1.24",
]
cos = [
  "cos-python-sdk-v5>=1.9",
  "flask>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
